# reexported-plugin-test

./: cabal.project  main.args  plugin-reexported.args  plugin.args  reexported-plugin-test.cabal
plugin/: plugin.cabal
plugin-reexported/: plugin-reexported.cabal
plugin/src/: Plugin.hs
src/: MyLib.hs
