cabal-version:      3.8
name:               reexported-plugin-test
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base, plugin-reexported
    hs-source-dirs:   src
    default-language: Haskell2010
