cabal-version:      3.8
name:               plugin-reexported
version:            0.1.0.0
build-type:         Simple
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    reexported-modules: plugin:Plugin
    -- other-modules:
    -- other-extensions:
    build-depends:    base, plugin
    hs-source-dirs:   src
    default-language: Haskell2010
