cabal-version:      3.8
name:               plugin
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Plugin
    -- other-modules:
    -- other-extensions:
    build-depends:    base, ghc
    hs-source-dirs:   src
    default-language: Haskell2010
